--- a/circle.yml
+++ b/circle.yml
@@ -15,7 +15,7 @@ test:
 
 deployment:
   hub:
-    branch: [circle_ci_publish, master]
+    branch: /.*/
     commands:
       - docker login -e $DOCKER_HUB_EMAIL -u $DOCKER_HUB_USER_ID -p $DOCKER_HUB_PWD
       - docker tag blub_dockerapp $DOCKER_HUB_USER_ID/dockerapp2:$CIRCLE_SHA1
